# DrumTranscriber

./: .gitignore  LICENSE.txt  README.md  frontend.py  pyproject.toml  requirements.txt
DrumTranscriber/: __init__.py
DrumTranscriber/utils/: config.py
dev/: preprocessing.py  train.py
dev/utils/: audio_utils.py
model/: data_labelling.ipynb  drum_transcriber.h5
model/utils/: config.py  forked_pigeon.py
src/DrumTranscriber/utils/: audio_utils.py
src/drum_transcriber.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
