[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drum-transcriber"
version = "0.0.1"
authors = [
  { name="Yoshi Man", email="yoshiman@me.com" },
]
description = "A package that classifies drum audio."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yoshi-man/DrumTrascriber"
"Bug Tracker" = "https://github.com/yoshi-man/DrumTrascriber/issues"